--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".app.SignupActivity" />
-        <activity android:name=".app.LoginActivity" />
+        <activity android:name=".app.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".app.ResetPasswordActivity" />
         <activity
             android:name=".app.MainActivity"
